Edited wiki page through web user interface.

--- a/wiki/PropuestasAndroid.wiki
+++ b/wiki/PropuestasAndroid.wiki
@@ -3,10 +3,18 @@
 
 = Propuestas =
 
-programas que verifiquen requisitos
+    * Portar loader del engine de e-adventure a Android . Se podra elegir de una lista (GameLauncher) de juegos disponibles y que parse y genere el modelo.
 
-    * (primera idea)
-    * cargar imagenes distintos tamaños(correcta visualizacion)
-    * reproduccion video
-    * reproduccion audio
-    * descarcar algun juego y ver interaccion entre el jugador y la aplicacion 
+    * Gestor de animaciones . Basado en el motor de e-adventure , relizar un gestor de animaciones para nuestro motor en Android .
+
+    * Gestor Multimedia : Basado en motor e-adventure , realizar un gestor. 
+
+        * Reproduccion de video
+        * Reproduccion de audio
+        * TextToSpeach
+    
+    * ResourceHandler : Basado en el motor e-adventure , realizar un un Handler para los recursos . Ver si se pueden cargar Zips , etc... 
+
+    * Realizar un prototipo del HUD . 
+
+    * Prototipo de diseño de main loop del juego y estados del juego .
