Edited wiki page through web user interface.

--- a/wiki/RepartoTareas.wiki
+++ b/wiki/RepartoTareas.wiki
@@ -1,6 +1,6 @@
 #Reparto inicial de roles y responsabilidades. (Esto variará :) )
 
-= Investigación <e-Adventure>
+= Investigación <e-Adventure> =
 
 = JUANMA = 
 
