Edited wiki page through web user interface.

--- a/wiki/RepartoTareas.wiki
+++ b/wiki/RepartoTareas.wiki
@@ -1,4 +1,4 @@
-#Reparto inicial de roles y responsabilidades. (Esto variará :) )
+#summary Reparto inicial de roles y responsabilidades. (Esto variará :)
 
 = Investigación <e-Adventure> =
 
