--- a/wiki/Indice.wiki
+++ b/wiki/Indice.wiki
@@ -15,13 +15,13 @@
 
  # EnlacesInteresAndroid 
 
- ===Prototipos===
+===Prototipos===
  
-      # PrototipoLoaderAndroid 
+ # PrototipoLoaderAndroid 
 
 ----
 
-== E-Adventure ==
+== e-Adventure ==
 
  # RequisitosFuncionales
 
