--- a/ProyectoSI/PruebasAndroid/res/values/strings.xml
+++ b/ProyectoSI/PruebasAndroid/res/values/strings.xml
@@ -5,4 +5,6 @@
 
 <string name="menu_insert">Insert game</string>
 <string name="menu_delete">Delete game</string>
+
+<string name="prueba">Prueba</string>
 </resources>
