--- a/trunk/ProyectoSI/PruebasAndroid/res/values/strings.xml
+++ b/trunk/ProyectoSI/PruebasAndroid/res/values/strings.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="no_games">No games to load</string>
+    <string name="no_games">No games found</string>
     <string name="app_name">SAX Loader Prototype</string>
 
-<string name="menu_insert">Insert game</string>
-<string name="menu_delete">Delete game</string>
+<string name="menu_install">Install games</string>
+<string name="menu_uninstall">Uninstall games</string>
 
 <string name="prueba">Prueba</string>
 </resources>
