Edited wiki page through web user interface.

--- a/wiki/Indice.wiki
+++ b/wiki/Indice.wiki
@@ -15,7 +15,9 @@
 == Android ==
 
  # EnlacesInteresAndroid 
+ # TerminalesAndroid
  # [http://developer.android.com/guide/appendix/glossary.html GlosarioAndroid]
+
 
 ===Prototipos===
  
