--- a/wiki/PrototipoLoaderAndroid.wiki
+++ b/wiki/PrototipoLoaderAndroid.wiki
@@ -23,3 +23,7 @@ http://xml.org/sax/features/validation
 Note that despite the ability to query the validation feature, there is currently no validating parser available. Also note that currently either namespaces or namespace prefixes can be enabled, but not both at the same time.
 
  ISSUE 990: http://code.google.com/p/android/issues/detail?id=990 No referencia bien sin namespaces los qname 
+
+ * Pasar datos a SD -> bug en DDMS utilizar comando consola :
+  * Meter datos : adb push foo.txt /sdcard/foo.txt
+  * Sacar datos : adb pull /sdcard/foo.txt foo.txt 
