--- a/wiki/PrototipoLoaderAndroid.wiki
+++ b/wiki/PrototipoLoaderAndroid.wiki
@@ -27,3 +27,6 @@ Note that despite the ability to query the validation feature, there is currentl
  * Pasar datos a SD -> bug en DDMS utilizar comando consola :
   * Meter datos : adb push foo.txt /sdcard/foo.txt
   * Sacar datos : adb pull /sdcard/foo.txt foo.txt 
+
+ * Metodos del editor que no usa el motor ( Proxima iteracion del prototipo , limpio las clases ) :
+  * Clase Loader : loadAdaptationProfile(InputStreamCreator, String, List<Incidence>) loadAdventureData(InputStreamCreator, List<Incidence>, boolean)
