Edited wiki page through web user interface.

--- a/wiki/PrototipoLoaderAndroid.wiki
+++ b/wiki/PrototipoLoaderAndroid.wiki
@@ -24,6 +24,10 @@ Note that despite the ability to query the validation feature, there is currentl
 
  ISSUE 990: http://code.google.com/p/android/issues/detail?id=990 No referencia bien sin namespaces los qname 
 
+
+ -> para solucionar cambio los qName por sName de la clase Loader
+ -> cambio todos los getQName por getLocalName
+
  * Pasar datos a SD -> bug en DDMS utilizar comando consola :
   * Meter datos : adb push foo.txt /sdcard/foo.txt
   * Sacar datos : adb pull /sdcard/foo.txt foo.txt 
