Edited wiki page through web user interface.

--- a/wiki/TerminalesAndroid.wiki
+++ b/wiki/TerminalesAndroid.wiki
@@ -1,5 +1,5 @@
 #summary Aqui vamos a poner las carácteristicas de todos los terminales Android
-
+#sidebar BarraNavegacion
 = Terminales =
 
 La lista tiene como objetivo el hacernos una idea de los dispositivos en los que debera correr la aplicacíon ( que tipo de pantallas , de que memoria y potencia disponen , que componentes HW tienen ) 
