Edited wiki page through web user interface.

--- a/wiki/PropuestasAndroid.wiki
+++ b/wiki/PropuestasAndroid.wiki
@@ -1,5 +1,6 @@
 #summary Aquí introducimos las propuestas de prototipos sobre funcionalidades de Android.
 #labels Phase-Requirements
+#sidebar BarraNavegacion
 
 = Propuestas =
 
