Edited wiki page through web user interface.

--- a/wiki/RequisitosFuncionales.wiki
+++ b/wiki/RequisitosFuncionales.wiki
@@ -1,5 +1,6 @@
 #summary Requisitos del comportamiento de nuestra aplicación
 #labels Phase-Requirements
+#sidebar BarraNavegacion
 
 ==Escenas:==
 ===(Escenas conectadas por salidas , Dibujo por el que puedes realizar acciones)===
