Edited wiki page through web user interface.

--- a/wiki/PrototipoLoaderAndroid.wiki
+++ b/wiki/PrototipoLoaderAndroid.wiki
@@ -29,6 +29,8 @@ Note that despite the ability to query the validation feature, there is currentl
  -> para solucionar cambio los qName por sName de los Handler ( ChapterHandler y DescriptorHandler)
  -> cambio todos los getQName por getLocalName de los Handler ( ChapterHandler y DescriptorHandler)
 
+Basicamente lo de arriba lo tengo que hacer para todos los Handler .. se van a acabar usando casi todos...
+
  * Pasar datos a SD -> bug en DDMS utilizar comando consola :
   * Meter datos : adb push foo.txt /sdcard/foo.txt
   * Sacar datos : adb pull /sdcard/foo.txt foo.txt 
